# texas-crime-geospatial-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  requirements.txt  setup.py
config/: settings.yaml
docs/: architecture.md  index.md  installation.md  usage.md
docs/analysis/: hotspot_detection.md  predictive_modeling.md  spatial_clustering.md
docs/api/: cpp_api.md  python_api.md
docs/data/: data_sources.md
notebooks/: texas_crime_analysis.ipynb
scripts/: fetch_data.py  generate_maps.py  run_analysis.py
src/cpp/bindings/: spatial_ext.cpp
src/cpp/clustering/: dbscan.cpp  dbscan.h
src/cpp/spatial_index/: kdtree.cpp  kdtree.h
src/python/: __init__.py
src/python/analysis/: __init__.py  hotspot_detection.py  predictive_model.py  spatial_clustering.py  statistical_analysis.py
src/python/data/: __init__.py  fetcher.py  loader.py  preprocessor.py
src/python/utils/: __init__.py  config.py  helpers.py
src/python/visualization/: __init__.py  dashboard.py  heatmap.py  map_generator.py
tests/: conftest.py  test_analysis.py  test_data.py  test_visualization.py
tests/cpp/: test_dbscan.cpp  test_kdtree.cpp
